--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -126,7 +126,7 @@
             <ul class="form-style-1">
                 <li>
                     @Html.LabelFor(a => a.Remark)
-                    @Html.TextAreaFor(a => a.Remark, new { id = "Remark", @class = "field-long field-textarea", placeholder = "กำไร" })
+                    @Html.TextAreaFor(a => a.Remark, new { id = "Remark", @class = "field-long field-textarea", placeholder = "หมายเหตุ" })
                     @Html.ValidationMessageFor(a => a.Remark)
                 </li>
                 <br />
