--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -36,44 +36,64 @@
         <form>
             <ul class="form-style-1">
                 <li>
-                    <label>Products <span class="required">*</span></label>
-                    <input type="text" id ="SerialNo" name="field1" class="field-divided" placeholder="Serial" />&nbsp;<input type="text" id="MachineNo" name="field1" class="field-divided" placeholder="หมายเลขเครื่อง" />
+                    @Html.LabelFor(a => a.SerialNo)
+                    @Html.TextBoxFor(a => a.SerialNo, new { id = "SerialNo", @class = "field-divided", placeholder = "Serial" })
+                    @Html.ValidationMessageFor(a => a.SerialNo)&nbsp;
+                    @Html.LabelFor(a => a.MachineNo)
+                    @Html.TextBoxFor(a => a.MachineNo, new { id = "MachineNo", @class = "field-divided", placeholder = "หมายเลขเครื่อง" })
+                    @Html.ValidationMessageFor(a => a.MachineNo)
                 </li>
                 <li>
-                    <label>ประเภทสินค้า</label>
-                    <select name="field4" class="field-select" id="ProductType">
-                        <option value="Advertise">Alphair</option>
-                        <option value="Partnership">Air Vent</option>
-                        <option value="General Question">Ball Valve </option>
-                    </select>
+                    @Html.LabelFor(a => a.ProductType)
+                    @Html.DropDownListFor(a => a.ProductType, new SelectListItem[]{
+                    new SelectListItem() {Text = "Alphair", Value="1"},
+                    new SelectListItem() {Text = "Air Vent", Value="2"},
+                    new SelectListItem() {Text = "Ball Valve", Value="3"}}, new { @class = "field-divided" })
                 </li>
                 <li>
-                    <input type="text" id="Brand" name="field1" class="field-divided" placeholder="ยี่ห้อ" />&nbsp;<input type="text" id="Size" name="field2" class="field-select-small" placeholder="ขนาด" />
+                    @Html.LabelFor(a => a.Brand)
+                    @Html.TextBoxFor(a => a.Brand, new { id = "Brand", @class = "field-divided", placeholder = "ยี่ห้อ" })
+                    @Html.ValidationMessageFor(a => a.Brand)&nbsp;
+                    @Html.LabelFor(a => a.Size)
+                    @Html.TextBoxFor(a => a.Size, new { id = "Size", @class = "field-select-small", placeholder = "ขนาด" })
+                    @Html.ValidationMessageFor(a => a.Size)
                 </li>
                 <li>
-                    <input type="text" id="Model" name="field2" class="field-divided" placeholder="รุ่น" />&nbsp;<input type="text" id="Lifetime" name="field2" class="field-select-small" placeholder="อายุการใช้งาน" />&nbsp;<input type="text" name="field2" class="field-select-small" value="ปี" />
+                    @Html.LabelFor(a => a.Model)
+                    @Html.TextBoxFor(a => a.Model, new { id = "Model", @class = "field-divided", placeholder = "รุ่น" })
+                    @Html.ValidationMessageFor(a => a.Model)&nbsp;
+                    @Html.LabelFor(a => a.Lifetime)
+                    @Html.TextBoxFor(a => a.Lifetime, new { id = "Lifetime", @class = "field-select-small", placeholder = "อายุการใช้งาน" })
+                    @Html.ValidationMessageFor(a => a.Lifetime)&nbsp;<label>ปี</label>
+                 
                 </li>
                 <li>
-                    <label class="label-big">รับเข้า</label>&nbsp;<label class="label-small">หน่วยนับ</label>
+                    @Html.LabelFor(a => a.ReceiveDate)
+                    @Html.TextBoxFor(a => a.ReceiveDate, new { id = "ReceiveDate", @class = "field-divided", placeholder = "วันที่รับเข้า" })
+                    @Html.ValidationMessageFor(a => a.ReceiveDate)&nbsp;
+                    @Html.LabelFor(a => a.Unit)
+                    @Html.DropDownListFor(a => a.Unit, new SelectListItem[]{
+                    new SelectListItem() {Text = "ชิ้น", Value="1"},
+                    new SelectListItem() {Text = "แท่ง", Value="2"}}, new { @class = "field-select-small-2" })
                 </li>
                 <li>
-                    <input type="text" id="ReceiveDate" class="field-divided" placeholder="วันที่รับเข้า" />&nbsp;<select name="field4" id="Unit" class="field-select-small-2">
-                    <option value="Advertise">ชิ้น</option>
-                    <option value="Partnership">แท่ง</option>
-                    <option value="General Question">pack</option>
-                </select>
+                    @Html.LabelFor(a => a.Balance)
+                    @Html.TextBoxFor(a => a.Balance, new { id = "Balance", @class = "field-select-small", placeholder = "ยกมา" })
+                    @Html.ValidationMessageFor(a => a.Balance)&nbsp;
+                    @Html.LabelFor(a => a.Remain)
+                    @Html.TextBoxFor(a => a.Remain, new { id = "Remain", @class = "field-select-small", placeholder = "คงเหลือ" })
+                    @Html.ValidationMessageFor(a => a.Remain)
                 </li>
                 <li>
-                    <label class="label-small">ยกมา</label>&nbsp;<label class="label-small-3">คงเหลือ</label>
-                </li>
-                <li>
-                    <input type="text" id="Balance" name="field1" class="field-select-small" placeholder="ยกมา" />&nbsp;<input type="text" id="Remain" name="field2" class="field-select-small" placeholder="คงเหลือ"  />
-                </li>
-                <li>
-                    <label class="label-small-2">หาย</label>&nbsp;<label class="label-small-2">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
-                </li>
-                <li>
-                    <input type="text" id="Lost" name="field6" class="field-select-small" placeholder="หาย" />&nbsp;<input type="text" id="Repair" name="field7" class="field-select-small" placeholder="ซ่อม" />&nbsp;<input type="text" id="Break" name="field8" class="field-select-small" placeholder="ชำรุด" />
+                    @Html.LabelFor(a => a.Lost)
+                    @Html.TextBoxFor(a => a.Lost, new { id = "Lost", @class = "field-select-small", placeholder = "หาย" })
+                    @Html.ValidationMessageFor(a => a.Lost)&nbsp;
+                    @Html.LabelFor(a => a.Repair)
+                    @Html.TextBoxFor(a => a.Repair, new { id = "Repair", @class = "field-select-small", placeholder = "ซ่อม" })
+                    @Html.ValidationMessageFor(a => a.Repair)&nbsp;
+                    @Html.LabelFor(a => a.Break)
+                    @Html.TextBoxFor(a => a.Break, new { id = "Break", @class = "field-select-small", placeholder = "ชำรุด" })
+                    @Html.ValidationMessageFor(a => a.Break)
                 </li>
             </ul>
             <ul class="form-style-1">
@@ -81,8 +101,9 @@
                     <button class="imgbutton" id="img"></button>
                 </li>
                 <li>
-                    <label>หมายเหตุ<span class="required">*</span></label>
-                    <textarea name="field5" id="Remark" class="field-long field-textarea"></textarea>
+                    @Html.LabelFor(a => a.Remark)
+                    @Html.TextAreaFor(a => a.Remark, new { id = "Remark", @class = "field-long field-textarea", placeholder = "หมายเหตุ" })
+                    @Html.ValidationMessageFor(a => a.Remark)
                 </li>
                 <li>
                     <input type="submit" value="Save" id="Create" />
@@ -193,7 +214,7 @@
                 SerialNo: $("#SerialNo").val(), MachineNo: $("#MachineNo").val(), ProductType: 1, Brand: $("#Brand").val(),
                 Size: $("#Size").val(), Model: $("#Model").val(), Lifetime: $("#Lifetime").val(), ReceiveDate: $("#ReceiveDate").val(),
                 Unit: 1, Balance: $("#Balance").val(), Remain: $("#Remain").val(), Lost: $("#Lost").val(), Repair: $("#Repair").val(),
-                Break: $("#Break").val(), img: "test", Remark: $("#Remark").val()};
+                Break: $("#Break").val(), Remark: $("#Remark").val()};
             console.log(dataObject);
             $.ajax(
             {
@@ -202,29 +223,13 @@
                 data: dataObject,
                 datatype: 'json',
 
-                success: function (result) {
-                    if (result.toString() == "Success") {
-                        alert(result)
-                    }
-                    else {
-                        alert(result)
-                    }
+                success: function (data) {
+                    alert('Created Successfully');
+                    window.location.href = "../ExpenseMaster/IndexExpenseMaster";
                 },
-                error: function (result) {
-                    alert("Error")
-                }
+                error: function (msg) { alert(msg); }
             });
         });
     });
 
 </script>
-@{
-
-            if (ViewData["result"] != "" && ViewData["result"] != null)
-            {
-                ViewData["result"] = null;
-        <script type="text/javascript" language="javascript">
-                    alert("Data saved Successfully");
-        </script>
-    }
-}
