--- a/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
@@ -150,11 +150,6 @@
                 success: function (data) {
                     data = JSON.parse(data);
                     console.log(data);
-                    //var html = '<table id="tableData">';
-                    //html += '<thead>';
-                    //html += '<tr>';
-                    //html += '<th>No.</th>';
-                    //html += '<th>รายละเอียด</th>';
                     var html = '<tbody>';
                     for (var i = 0; i < data.Table.length; i++) {
                         html += '<tr>';
@@ -167,21 +162,38 @@
                         html += '<td>' + data.Table[i].Size + '</td>';
                         html += '<td>' + data.Table[i].Remain + '</td>';
                         html += '<td>' + data.Table[i].Unit + '</td>';
+                        html += '<td>';
+                        html += '<a href="/Products/EditProducts?id=' + data.Table[i].ID + '" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
+                        html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') " >' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
+                        html += '</td>';
                         html += '</tr>';
                     }
                     html += '</tbody>';
-                    //html += '</tr>';
-                    //html += '</thead>';
-                    //html += '</table>';
-                    //$("#tableData").html(html);
                     document.getElementById("result").innerHTML = html;
                 },
                 error: function (result) {
                     alert(result)
                 }
             });
-
-           
-
         });
+        function RowDelete(id) {
+            var dataObject = { ID: id };
+            $.ajax(
+                {
+                    url: 'http://localhost:13131/api/Product/Delete',
+                    type: 'DELETE',
+                    data: dataObject,
+                    datatype: 'json',
+
+                    success: function (result) {
+                        alert('Delete is completed')
+                        window.location.href = "../Products/IndexProducts";
+                    }
+                    ,
+                    error: function (msg) {
+                        alert(msg)
+                    }
+
+                });
+        }
     </script>
