--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -218,7 +218,7 @@
             console.log(dataObject);
             $.ajax(
             {
-                url: 'http://localhost:13131/api/Product/Post',
+                url: 'http://localhost:13131/api/Product',
                 type: 'POST',
                 data: dataObject,
                 datatype: 'json',
