--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -151,7 +151,7 @@
                     <label class="label-5">ชนิดงาน</label>&nbsp;<label class="label-2">Status</label>
                 </li>
                 <li>
-                    <select id="cmbTypeWorking" class="field-divided"></select> &nbsp;<select id="cmbJobStatus" class="field-divided" ></select>
+                    <select id="cmbTypeWorking" class="field-divided-2"></select><select id="cmbJobStatus" class="field-divided" ></select>
                 </li>
                 
                 <li>
