--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -115,7 +115,7 @@
                 datatype: 'json',
                 success: function (data) {
                     data = JSON.parse(data);
-                    var html = '<tbody>';
+                    var html = '';
                     for (var i = 0; i < data.Table.length; i++) {
                         html += '<tr>';
                         html += '<td>' + data.Table[i].RowNum + '</td>';
@@ -127,7 +127,6 @@
                         html += '</td>';
                         html += '</tr>';
                     }
-                    html += '</tbody>';
                     document.getElementById("result").innerHTML = html;
 
                 },
@@ -142,7 +141,7 @@
         var dataObject = { ID: id };
         $.ajax(
             {
-                url: 'http://localhost:13131/api/IncomeMaster/Delete',
+                url: 'http://localhost:13131/api/IncomeMaster',
                 type: 'DELETE',
                 data: dataObject,
                 datatype: 'json',
