--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -966,6 +966,31 @@
             }
         });
 
+        $.ajax(
+            {
+                url: 'http://localhost:13131/api/Customer',
+                type: 'GET',
+                datatype: 'json',
+                success: function (data) {
+                    data = JSON.parse(data);
+                    var html = '';
+                    for (var i = 0; i < data.Table.length; i++) {
+                        html += '<tr>';
+                        html += '<td>' + data.Table[i].RowNum + '</td>';
+                        html += '<td class="hidecolumn">' + data.Table[i].CustID + '</td>';
+                        html += '<td>' + data.Table[i].Name + '</td>';
+                        html += '<td>' + data.Table[i].Tel + '</td>';
+                        html += '<td>' + data.Table[i].Contact + '</td>';
+                        html += '</tr>';
+                    }
+                    document.getElementById("customerDialog").innerHTML = html;
+
+                },
+                error: function (msg) {
+                    alert(msg)
+                }
+            });
+
         $('#parentHorizontalTab').easyResponsiveTabs({
             type: 'default', //Types: default, vertical, accordion
             width: 'auto', //auto or any width like 600px
