--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -83,7 +83,7 @@
                     <th>บุคคลติดต่อ</th>
                 </tr>
             </thead>
-            <tbody data-link="row" class="rowlink">
+            <tbody>
                 
             </tbody>
         </table>
@@ -975,7 +975,7 @@
                     data = JSON.parse(data);
                     var html = '';
                     for (var i = 0; i < data.Table.length; i++) {
-                        html += '<tr>';
+                        html += '<tr class="clickable-row">';
                         html += '<td>' + data.Table[i].RowNum + '</td>';
                         html += '<td class="hidecolumn">' + data.Table[i].CustID + '</td>';
                         html += '<td>' + data.Table[i].Name + '</td>';
